# BioPAT-Benchmark

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  implementation_plan_phase2.md  implementation_plan_phase3.md  pyproject.toml  setup_env.sh  task.md
alembic/: env.py
alembic/versions/: 20260128_0001_initial_schema.py
configs/: default.yaml  experiments.yaml  experiments_agent.yaml  novex.yaml  phase1.yaml
data/benchmark/: corpus.jsonl  dual_corpus.jsonl  metadata.json  queries.jsonl
data/benchmark/qrels/: dev.tsv  test.tsv
data/benchmark/results/: bm25_test.run  bm25_test_results.json
data/checkpoints/: step1_ros.parquet  step2_patents.parquet  step3_claims.parquet  step4_papers.parquet  step5_qrels.parquet  step6_dev_qrels.parquet  step6_dev_queries.parquet  step6_splits.json  step6_test_qrels.parquet  step6_test_queries.parquet  step6_train_qrels.parquet  step6_train_queries.parquet  step7_stats.json  step7b_metadata.json  step8_metrics.json
data/novex/: curation_costs.json  queries.jsonl  rebuild_costs.json  statements.jsonl  statements_v2.jsonl
data/novex/checkpoints/: a1_candidates.json  a2_extractions.json  a3_quality.json  a4_statements.json
data/novex/qrels/: tier1.tsv  tier3.tsv
data/novex/results/: all_results.json  costs.json
data/novex/reverse/: grading_costs.json  novelty_costs.json  novelty_queue_outliers.json  novelty_queue_outliers_result.json  novelty_queue_scale.json  novelty_queue_scale_result.json  step4_candidates.json  step7_selected.json  step8_novelty.json
docs/: API_REFERENCE.md  DATASHEET.md  DATA_SOURCES.md  METHODOLOGY.md  REPRODUCIBILITY.md  v4_multimodal_guide.md
examples/case_study/: README.md  corpus.jsonl  evaluate_case_study.py  novelty_assessment_demo.py  qrels.tsv  queries.jsonl
planning/: implementation_plan.md  implementation_plan_advanced.md  implementation_plan_phase2.md  implementation_plan_phase3.md  implementation_plan_phase5.md  implementation_plan_phase6.md  implementation_plan_reproducibility.md  task.md
scripts/: README.md  analyze_novex.py  build_corpus.py  curate_statements.py  fix_outliers.py  generate_paper_outputs.py  run_benchmark.py  run_experiments.py  run_novelty_batch.py  run_novex.py  scale_benchmark.py  test_retrieval_pipeline.py  test_sota_components.py  test_with_mock_data.py  vps_deploy.sh  vps_run_all.sh  vps_run_novex.sh
src/biopat/: __init__.py  __main__.py  compat.py  config.py  pipeline.py  pipeline_novelty.py  pipeline_phase2.py  pipeline_phase3.py  reproducibility.py
src/biopat/benchmark/: __init__.py  beir_format.py  sampling.py  splits.py
src/biopat/data/: __init__.py  acquisition.py  base.py  biorxiv.py  ncbi_sequences.py  patents.py  pubchem.py  pubmed.py  surechembl.py  uniprot.py
src/biopat/evaluation/: __init__.py  ablation.py  agent_metrics.py  agent_retrieval.py  analysis.py  bm25.py  dense.py  dual_qrels.py  error_analysis.py  hybrid.py  llm_evaluator.py  metrics.py  publication.py  reranker.py  statistical_tests.py  trimodal_retrieval.py
src/biopat/groundtruth/: __init__.py  ep_citations.py  relevance.py  stratification.py  temporal.py
src/biopat/harmonization/: __init__.py  entity_resolver.py  linker.py  schema.py
src/biopat/ingestion/: __init__.py  chembl.py  epo.py  office_action.py  openalex.py  patent_sequences.py  patentsview.py  pubchem.py  retry.py  ros.py  surechembl.py  uniprot.py  wipo.py
src/biopat/llm/: __init__.py  cost_tracker.py  providers.py
src/biopat/novex/: __init__.py  _util.py  analysis.py  annotation.py  benchmark.py  curate.py  evaluator.py
src/biopat/processing/: __init__.py  chemical_index.py  claim_mapper.py  international_patents.py  linking.py  npl_parser.py  papers.py  patent_ids.py  patents.py  prior_patents.py  sequence_index.py
src/biopat/reasoning/: __init__.py  claim_parser.py  (+2 more)
tests/: __init__.py  test_benchmark.py  test_chemical_index.py  test_groundtruth.py  test_harmonization.py  test_integration_apis.py  test_llm_evaluator.py  test_llm_providers.py  test_phase2.py  test_phase3.py  test_processing.py  test_reproducibility.py  test_sequence_index.py  test_statistical_tests.py  test_trimodal_comprehensive.py  test_trimodal_retrieval.py
(+45 files in other folders)
